<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.RegisterActivity">

    <TextView
        style="@style/titleText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:typeface="normal" />

    <EditText
        android:id="@+id/name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:inputType="text"
        android:textSize="14sp"
        android:maxLength="80"
        android:textColor="@color/blue" />

    <TextView
        style="@style/titleText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:typeface="normal" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:maxLength="80"
        android:textColor="@color/blue" />

    <TextView
        style="@style/titleText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:typeface="normal" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:maxLength="80"
        android:textColor="@color/blue" />

    <TextView
        style="@style/titleText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        android:typeface="normal" />

    <EditText
        android:id="@+id/password_repeat_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:maxLength="80"
        android:textColor="@color/blue" />

        <Button
            android:id="@+id/btn_register_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="180dp"
            android:background="#8492A6"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_or"
            app:layout_constraintVertical_bias="0.88" />
</LinearLayout>

</ScrollView>